--- a/src/app/components/menu/menu.html
+++ b/src/app/components/menu/menu.html
@@ -11,7 +11,7 @@
     <input type="text" placeholder="What do you want to play?" class="w-2/5 search"/>
 
     <div class="w-2/5 account">
-      <a class="text-white!" (click)="menu.toggle($event)">
+      <a class="text-white! image-container" (click)="menu.toggle($event)">
         <img src="https://i.pinimg.com/736x/19/cc/74/19cc74a49db1a5cc9d4d007bfa5f6668.jpg" alt="profile"
              class="profile">
         <p-menu #menu [model]="items" [popup]="true"/>
