--- a/src/app/components/play/play.css
+++ b/src/app/components/play/play.css
@@ -2,5 +2,115 @@
 }
 .container-play{
   background: var(--primary-black);
+  display: flex;
+  align-items: center;
+  padding:20px;
+}
+.control-play{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.play-btn{
+  width: 35px;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  border-radius: 50%;
+  background: #fff;
+  font-size: 16px;
+  color:#000;
+  margin: 0 30px;
+}
+.play-btn:hover{
+  transform: scale(1.05);
+}
+.material-symbols-outlined{
+  color: #B3B3B3;
+  cursor: pointer;
+}
+
+.playing{
+  display: flex;
+  align-items: center;
+  margin-top: 10px !important;
+}
+
+
+/*range progress*/
+/* Thumb ẩn mặc định */
+.slider {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 100%;
+  height: 4px;
+  border-radius: 3px;
+  background: linear-gradient(90deg , #fff var(--progress),  #4d4d4d var(--progress));
+  outline: none;
+  cursor: pointer;
+}
+.slider:hover{
+  background: linear-gradient(90deg , var(--primary-green) var(--progress),  #4d4d4d var(--progress));
+}
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 0;
+  width: 0;
+  border-radius: 50%;
+  background: #fff;
+  cursor: pointer;
+}
+
+
+/* Hiện thumb khi hover */
+.slider:hover::-webkit-slider-thumb {
+  height: 10px;
+  width: 10px;
+}
+
+.other{
+  position: relative;
+  justify-content: space-between;
+}
+.other .material-symbols-outlined{
+  margin-left: 15px;
+}
+.display{
+  margin-top: 40px;
+  margin-left: 10px;
   height: 100%;
 }
+.song-info{;
+  flex-direction: column;
+}
+.text-song-small{
+  text-align: left;
+}
+.song{
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.song-liked{
+  width: 20px;
+  height: 20px;
+  margin-left: 10px;
+}
+.song-img{
+  border-radius: 6px;
+}
+.other{
+  display: flex;
+  align-items: center;
+}
+.volume{
+  margin-left: 7px;
+}
+.queue{
+
+  scrollbar-width: none;             /* “auto” | “thin” | “none” */
+  scrollbar-color: #1db954 #2a2a2a;
+}
+
