--- a/src/app/components/play/play.html
+++ b/src/app/components/play/play.html
@@ -1,3 +1,125 @@
 <div class="container-play">
+  <div class="song w-1/3 ">
+    <img src="https://i.scdn.co/image/ab67616d00004851a1bc26cdd8eecd89da3adc39" alt="logo.svg" class="song-img"/>
+    <div class=" song-info">
+      <div class="text-song">Chúng ta không thuộc về nhau</div>
+      <div class="text-song-small">sơn tùng M-TP</div>
+    </div>
+    <img src="like-icon-liked.svg" alt="logo.svg" class="song-liked"/>
+  </div>
+  <div class="play w-1/3">
+    <div class="control-play text-white! w-1/1">
+      <span class="material-symbols-outlined">
+         skip_previous
+      </span>
+      <div class="play-btn">
+        @if (isPlaying) {
+          <i class="fa-solid fa-pause cursor-pointer" (click)="togglePlay()"></i>
+        } @else {
+          <i class="fa-solid fa-play cursor-pointer" (click)="togglePlay()"></i>
+        }
+      </div>
+      <span class="material-symbols-outlined">
+      skip_next
+    </span>
+    </div>
 
+    <div class="playing w-1/1">
+      <input type="range" [value]="progress" (input)="seek($event)" class="w-1/1 slider" #range/>
+
+    </div>
+    <audio #audio src="assets/mp3/chungtakhongthuocvenhau.mp3"
+           (timeupdate)="onTimeUpdate()" (loadedmetadata)="onLoad()" (ended)="onEnded()"
+    ></audio>
+  </div>
+  <div class="other w-1/3">
+    <span class="text-white! text-xs display">{{ displayCurrent }}/{{ displayDuration }}</span>
+    <div class="flex-center">
+      <span class="material-symbols-outlined" title="lyrics">
+      lyrics
+      </span>
+      <span class="material-symbols-outlined" title="queue" (click)="openPlaylistDialog()">
+      playlist_play
+      </span>
+      <span class="text-white! ml-[10px]!" title="volume" (click)="toggleMute()">
+              <i class="fa-solid symbol" [ngClass]="isMuted ? 'fa-volume-xmark': 'fa-volume-high'"></i>
+
+      </span>
+      <input type="range" min="0" max="1" step="0.01" (input)="volumeChange()" #volume class="slider volume">
+    </div>
+
+  </div>
 </div>
+
+<p-dialog [modal]="true" [(visible)]="isPlaylistDialogVisible" position="right"  class="queue" [style]="{ minHeight: '500px', height:'800px' }">
+  <ng-template #header>
+    <div class="inline-flex items-center justify-center gap-2">
+      <div class="text-song font-bold! ml-[0px]!">Queue</div>
+    </div>
+  </ng-template>
+
+  <div class="song w-1/1 mt-[20px]! ">
+    <img src="https://i.scdn.co/image/ab67616d00004851a1bc26cdd8eecd89da3adc39" alt="logo.svg" class="song-img"/>
+    <div class=" song-info">
+      <div class="text-song text-green">Chúng ta không thuộc về nhau</div>
+      <div class="text-song-small">sơn tùng M-TP</div>
+    </div>
+  </div>
+
+  <div class="song w-1/1 mt-[20px]!">
+    <img src="https://i.scdn.co/image/ab67616d00004851a1bc26cdd8eecd89da3adc39" alt="logo.svg" class="song-img"/>
+    <div class=" song-info">
+      <div class="text-song text">Chúng ta không thuộc về nhau</div>
+      <div class="text-song-small">sơn tùng M-TP</div>
+    </div>
+  </div>
+  <div class="song w-1/1 mt-[10px]!">
+    <img src="https://i.scdn.co/image/ab67616d00004851a1bc26cdd8eecd89da3adc39" alt="logo.svg" class="song-img"/>
+    <div class=" song-info">
+      <div class="text-song text">Chúng ta không thuộc về nhau</div>
+      <div class="text-song-small">sơn tùng M-TP</div>
+    </div>
+  </div>
+  <div class="song w-1/1 mt-[20px]!">
+    <img src="https://i.scdn.co/image/ab67616d00004851a1bc26cdd8eecd89da3adc39" alt="logo.svg" class="song-img"/>
+    <div class=" song-info">
+      <div class="text-song text">Chúng ta không thuộc về nhau</div>
+      <div class="text-song-small">sơn tùng M-TP</div>
+    </div>
+  </div>
+  <div class="song w-1/1 mt-[20px]!">
+    <img src="https://i.scdn.co/image/ab67616d00004851a1bc26cdd8eecd89da3adc39" alt="logo.svg" class="song-img"/>
+    <div class=" song-info">
+      <div class="text-song">Chúng ta không thuộc về nhau</div>
+      <div class="text-song-small">sơn tùng M-TP</div>
+    </div>
+  </div>
+  <div class="song w-1/1 mt-[20px]!">
+    <img src="https://i.scdn.co/image/ab67616d00004851a1bc26cdd8eecd89da3adc39" alt="logo.svg" class="song-img"/>
+    <div class=" song-info">
+      <div class="text-song">Chúng ta không thuộc về nhau</div>
+      <div class="text-song-small">sơn tùng M-TP</div>
+    </div>
+  </div>  <div class="song w-1/1 mt-[20px]!">
+  <img src="https://i.scdn.co/image/ab67616d00004851a1bc26cdd8eecd89da3adc39" alt="logo.svg" class="song-img"/>
+  <div class=" song-info">
+    <div class="text-song">Chúng ta không thuộc về nhau</div>
+    <div class="text-song-small">sơn tùng M-TP</div>
+  </div>
+</div>
+  <div class="song w-1/1 mt-[20px]!">
+    <img src="https://i.scdn.co/image/ab67616d00004851a1bc26cdd8eecd89da3adc39" alt="logo.svg" class="song-img"/>
+    <div class=" song-info">
+      <div class="text-song">Chúng ta không thuộc về nhau</div>
+      <div class="text-song-small">sơn tùng M-TP</div>
+    </div>
+  </div>
+  <div class="song w-1/1 mt-[20px]!">
+    <img src="https://i.scdn.co/image/ab67616d00004851a1bc26cdd8eecd89da3adc39" alt="logo.svg" class="song-img"/>
+    <div class=" song-info">
+      <div class="text-song">Chúng ta không thuộc về nhau</div>
+      <div class="text-song-small">sơn tùng M-TP</div>
+    </div>
+  </div>
+
+</p-dialog>
