--- a/src/styles.css
+++ b/src/styles.css
@@ -78,6 +78,30 @@ body{
 .text{
   transition: 0.2s;
 }
+.text-second{
+  color: #B3B3B3;
+  font-weight: 400;
+}
+.text-second:hover{
+
+}
+.text-hover:hover{
+  color: var(--primary-green)
+}
 .text:hover{
   color: var(--primary-green) !important;
+}
+.form-group label{
+  display: block;
+  margin-bottom: 10px;
+  margin-top: 20px;
+}
+p-password{
+  width: 100% !important;
+}
+input{
+  width: 100% !important;
+  background: transparent !important;
+  border: 1px solid #B3B3B3 !important;
+  color: #fff !important;
 }
