--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -17,10 +17,21 @@
       <hr>
     </div>
     <div class="login">
-      <form class="w-1/2">
+      <form class="w-1/2" (ngSubmit)="onSubmit()" #f="ngForm">
         <div class="form-group">
           <label for="email" class="font-[700]! text-sm!">Email or username</label>
-          <input type="text" pInputText id="email" class="form-input" placeholder="Email or username"/>
+          <input type="text" pInputText id="email" class="form-input mb-[7px]!" placeholder="Email or username"
+          name="email" required
+          [(ngModel)]="email"
+          #emailModel="ngModel"/>
+          @if (emailModel.invalid && emailModel.touched && emailModel.errors?.['required']){
+            <div class="input-error">
+              <span class="material-symbols-outlined input-error">
+                info
+              </span>
+              Please enter your Spotify username or email address.
+            </div>
+          }
         </div>
         <div class="form-group">
           <label for="password" class="font-[700]! text-sm!">Password</label>
@@ -30,7 +41,7 @@
 
         <div class="register-link">
           <span class="text-second">Don't Have an account?</span>
-          <a href="/" class="text-hover"> Sign up for Spotify</a>
+          <a routerLink="/signup" class="text-hover text-white!"> Sign up for Spotify</a>
         </div>
       </form>
     </div>
