--- a/src/styles.css
+++ b/src/styles.css
@@ -53,6 +53,10 @@ body{
   align-items: center;
   justify-content: center;
 }
+.flex-align{
+  display: flex;
+  align-items: center;
+}
 .text-song{
   color: #fff;
   font-size: 16px;
@@ -82,14 +86,16 @@ body{
   color: #B3B3B3;
   font-weight: 400;
 }
-.text-second:hover{
 
-}
-.text-hover:hover{
+.text-hover-main:hover{
   color: var(--primary-green)
 }
 .text:hover{
   color: var(--primary-green) !important;
+}
+.text-primary{
+  color: #fff;
+  font-weight: 600;
 }
 .form-group label{
   display: block;
@@ -99,9 +105,20 @@ body{
 p-password{
   width: 100% !important;
 }
-input{
+.container-login input{
   width: 100% !important;
   background: transparent !important;
   border: 1px solid #B3B3B3 !important;
   color: #fff !important;
+}
+.container-signup input{
+  width: 100% !important;
+  background: transparent !important;
+  border: 1px solid #B3B3B3 !important;
+  color: #fff !important;
+}
+.input-error{
+  color: #f3727f !important;
+  font-size: 16px !important;
+  margin-top: 5px !important;
 }
