--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-app-root, app-sidebar, app-home, app-play, app-content{
+app-root, app-sidebar, app-home, app-play, app-content, app-song-detail{
   display: block;
   height: 100%;
 }
@@ -69,7 +69,15 @@ body{
   font-weight: 500;
   margin-left: 10px;
 }
-.text-song-bold{
+.text-song-semibold{
+  color: #fff;
+  font-size: 16px;
+  font-weight: 700;
+}
+.text-primary-medium{
+  color: #fff;
+  font-size: 28px;
+  font-weight: 700;
 
 }
 .p-dialog{
@@ -77,7 +85,7 @@ body{
   border: 1px solid #282828 !important;
 }
 .text-green{
-  color: var(--primary-green)
+  color: var(--primary-green) !important
 }
 .text{
   transition: 0.2s;
@@ -102,6 +110,11 @@ body{
   margin-bottom: 10px;
   margin-top: 20px;
 }
+.big-title{
+  color:#fff;
+  font-weight: bold;
+  font-size:48px;
+}
 p-password{
   width: 100% !important;
 }
@@ -122,3 +135,12 @@ p-password{
   font-size: 16px !important;
   margin-top: 5px !important;
 }
+html{
+  --sb-size: 12px;
+  --sb-track: #0b0b0b;
+  --sb-thumb: #3d3d3d;
+  --sb-thumb-hover: #8a8a8a;
+  scrollbar-width: thin;
+  scrollbar-color: var(--sb-thumb) var(--sb-track);
+}
+
