--- a/src/app/components/menu/menu.html
+++ b/src/app/components/menu/menu.html
@@ -22,7 +22,7 @@
       <a class="text-white!">
         <span class="material-symbols-outlined">favorite</span>
       </a>
-      <a class="btn-explore" routerLink="/logib">Login</a>
+      <a class="btn-explore" routerLink="/login">Login</a>
     </div>
 
   </div>
