--- a/src/app/pages/song-detail/song-detail.html
+++ b/src/app/pages/song-detail/song-detail.html
@@ -1,33 +1,7 @@
 <div class="container-song-detail">
   <div class="main">
-    <div class="song-header">
-      <img src="https://i.scdn.co/image/ab67616d00001e02a1bc26cdd8eecd89da3adc39" alt="" class="song-avatar">
-      <div class="asdf">
-        <div class="h-1/5"></div>
-        <div class="song-header-info">
-          <div class="text-song-semibold">Song</div>
-          <div class="big-title">Chúng ta không thuộc về nhau</div>
-          <div class="song-header-detail">
-            <img src="https://i.scdn.co/image/ab6761610000e5eb5a79a6ca8c60e4ec1440be53" class="artist-avatar">
-            <span class="text-primary">Sơn tùng M-TP</span>
-            <span class="text-second">2024</span>
-            <span class="text-second">3:53</span>
-            <span class="text-second">54,530,921</span>
-          </div>
-        </div>
-
-      </div>
-    </div>
     <div class="song-content">
-      <div class="mt-[20px]! ml-[20px]! flex-align">
-        <i class="fa-solid fa-play cursor-pointer play-btn"></i>
-        <span class="material-symbols-outlined more">
-              download
-          </span>
-        <span class="material-symbols-outlined more">
-            page_control
-          </span>
-      </div>
+      <app-song-header [isPlaying]="isPlaying()" (toggleRequested)="toggleRequested.emit()"></app-song-header>
       <div class="pl-[20px]! pr-[20px]! mt-[20px]! ">
         <div class="flex">
           <div [class.expanded]="expanded" class="w-1/3">
