--- a/src/app/components/play/play.html
+++ b/src/app/components/play/play.html
@@ -13,10 +13,10 @@
          skip_previous
       </span>
       <div class="play-btn">
-        @if (isPlaying) {
-          <i class="fa-solid fa-pause cursor-pointer" (click)="togglePlay()"></i>
+        @if (isPlaying()) {
+          <i class="fa-solid fa-pause cursor-pointer" (click)="onToggle()"></i>
         } @else {
-          <i class="fa-solid fa-play cursor-pointer" (click)="togglePlay()"></i>
+          <i class="fa-solid fa-play cursor-pointer" (click)="onToggle()"></i>
         }
       </div>
       <span class="material-symbols-outlined">
@@ -25,15 +25,13 @@
     </div>
 
     <div class="playing w-1/1">
-      <input type="range" [value]="progress" (input)="seek($event)" class="w-1/1 slider" #range/>
+<!--      <input type="range" [value]="progress" (input)="seek($event)" class="w-1/1 slider" #range/>-->
+      <input type="range" (input)="onSeek($event)" class="w-1/1 slider" #rangeE [style.--progress]="progress() + '%'" [value]="progress()"/>
 
     </div>
-    <audio #audio src="assets/mp3/chungtakhongthuocvenhau.mp3"
-           (timeupdate)="onTimeUpdate()" (loadedmetadata)="onLoad()" (ended)="onEnded()"
-    ></audio>
   </div>
   <div class="other w-1/3">
-    <span class="text-white! text-xs display">{{ displayCurrent }}/{{ displayDuration }}</span>
+    <span class="text-white! text-xs display">{{ formatTime(currentTime()) }}/{{ formatTime(duration()) }}</span>
     <div class="flex-center">
       <span class="material-symbols-outlined" title="lyrics">
       lyrics
@@ -41,11 +39,13 @@
       <span class="material-symbols-outlined" title="queue" (click)="openPlaylistDialog()">
       playlist_play
       </span>
-      <span class="text-white! ml-[10px]!" title="volume" (click)="toggleMute()">
-              <i class="fa-solid symbol" [ngClass]="isMuted ? 'fa-volume-xmark': 'fa-volume-high'"></i>
-
+      <span class="text-white! ml-[10px]!" title="volume">
+              <i class="fa-solid symbol" (click)="onMute()" [ngClass]="isMuted() ? 'fa-volume-xmark': 'fa-volume-high'"></i>
       </span>
-      <input type="range" min="0" max="1" step="0.01" (input)="volumeChange()" #volume class="slider volume">
+      <input class="slider volume" #volumeE
+             type="range" [min]="0" max="1" step="0.01" (input)="onVolume()"
+             [style.--progress]="isMuted() ? '0%' : (volume() * 100) + '%'" [value]="isMuted() ? 0 : volume()"
+      />
     </div>
 
   </div>
