--- a/src/styles.css
+++ b/src/styles.css
@@ -134,6 +134,7 @@ p-password{
   color: #f3727f !important;
   font-size: 16px !important;
   margin-top: 5px !important;
+  font-weight: 600;
 }
 html{
   --sb-size: 12px;
