--- a/src/app/components/menu/menu.html
+++ b/src/app/components/menu/menu.html
@@ -5,24 +5,29 @@
     </a>
   </div>
   <div class="menu-main w-4/5">
+
     <a href="/" class="text-white!">
       <span class="material-symbols-outlined home">Home</span>
     </a>
     <input type="text" placeholder="What do you want to play?" class="w-2/5 search"/>
 
     <div class="w-2/5 account">
-      <a class="text-white! image-container" (click)="menu.toggle($event)">
-        <img src="https://i.pinimg.com/736x/19/cc/74/19cc74a49db1a5cc9d4d007bfa5f6668.jpg" alt="profile"
-             class="profile">
-        <p-menu #menu [model]="items" [popup]="true"/>
-      </a>
+        @if (userState() != null){
+          <a class="text-white! image-container" >
+          <img [src]="userState()?.avatar" alt="profile"
+               class="profile" (click)="menu.toggle($event)">
+          <p-menu #menu [model]="items" [popup]="true"/>
+          </a>
+        } @else {
+          <a class="btn-explore ml-[10px]!" routerLink="/login">Login</a>
+        }
       <a class="text-white!">
         <span class="material-symbols-outlined">group</span>
       </a>
       <a class="text-white!">
         <span class="material-symbols-outlined">favorite</span>
       </a>
-      <a class="btn-explore" routerLink="/login">Login</a>
+
     </div>
 
   </div>
